--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     de las marcas. Busco colaborar en proyectos creativos e impactantes.</p>
                 <div>
                     <a href="#work" class="botonNegro">WORK</a>
-                    <button class="botonBorde">CV DOWNLOAD</button>
+                    <a href="./img/PATRICA SÁNCHEZ-CV.pdf" class="botonBorde">CV DOWNLOAD</a>
                 </div>
             </div>
         </div>
@@ -252,7 +252,7 @@
                         <a href="https://www.linkedin.com/in/patriciasanchez96/" class="redes">LinkedIn</a>
                         <a href="https://www.instagram.com/96dopp?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
                             class="redes">Instagram</a>
-                        <a href="https://www.linkedin.com/in/patriciasanchez96/" class="redes">LinkedIn</a>
+                        <a href="https://es.fiverr.com/paaatss" class="redes">Fliver</a>
                     </div>
                     <a href="mailto:paaatss.30@gmail.com" class="mail">paaatss.30@gmail.com</a>
                 </div>
