--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <p class="p-desc">Hola soy <strong>Patricia</strong> Diseñadora Gráfica y Desarrolladora Web en
                     formación, apasionada por crear <strong>identidades visuales</strong> que potencien la comunicación
                     de las marcas. Busco colaborar en proyectos creativos e impactantes.</p>
-                <div>
+                <div class="botones1">
                     <a href="#work" class="botonNegro">WORK</a>
                     <a href="./img/PATRICA SÁNCHEZ-CV.pdf" class="botonBorde">CV DOWNLOAD</a>
                 </div>
