modificacion de colores

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- sticky-nav -->
     <div class="sticky-nav">
         <div class="c-nav">
-            <a class="nav-ico0" href="#home"><ion-icon size="large" name="home-outline"></ion-icon></a>
+            <a class="nav-ico" href="#home"><ion-icon size="large" name="home-outline"></ion-icon></a>
             <a class="nav-ico" href="#educación"><ion-icon size="large" name="school-outline"></ion-icon></a>
             <a class="nav-ico" href="#work"><ion-icon size="large"name="bag-outline"></ion-icon></ion-icon></a>
             <a class="nav-ico" href="#servicios"><ion-icon size="large" name="star-outline"></ion-icon></a>
@@ -46,15 +46,15 @@
                 </div>
             </div>
         </div>
-        <!-- logos -->
+<!-- logos -->
         <div class="subcontainer">
             <div class="logo-section">
-                <img src="./img/icons/boot.png" class="logo">
-                <img src="./img/icons/css.png" class="logo">
-                <img src="./img/icons/html.png" class="logo">
-                <img src="./img/icons/ps.png" class="logo">
-                <img src="./img/icons/ai.png" class="logo">
-                <img src="./img/icons/ae.png" class="logo">
+                <ion-icon size="large" name="logo-css3" class="logo color"></ion-icon>
+                <ion-icon name="logo-apple-appstore" class="logo color"></ion-icon>
+                <ion-icon name="code-outline" class="logo color"></ion-icon>
+                <ion-icon name="color-palette-outline" class="logo color"></ion-icon>
+                <ion-icon name="logo-javascript"class="logo color"></ion-icon>
+                <ion-icon name="play-circle-outline" class="logo color"></ion-icon>
             </div>
     </div>
 
@@ -112,7 +112,7 @@
             <div class="container-2" id="work">
                 <div class="title-section">
                     <h2> WORK</h2>
-                    <ion-icon size="large"name="bag-outline"></ion-icon>
+                    <ion-icon size="large"name="bag-outline" class="color"></ion-icon>
                 </div>
             </div>
             <div class="card-container">
@@ -158,7 +158,7 @@
             <div class="container-2" id="servicios">
                 <div class="title-section">
                     <h2>SERVICES</h2>
-                    <ion-icon size="large" name="star-outline"></ion-icon>
+                    <ion-icon size="large" name="star-outline" class="color"></ion-icon>
                 </div>
             </div>
 
@@ -167,7 +167,7 @@
                 <div class="serviceTitle">
                     <p>Diseño Gráfico y Branding</p>
                     <button id="boton" onclick="ShowHide('texto')" class="flecha"> <ion-icon size="large"
-                            name="caret-down-outline"></ion-icon></button>
+                            name="caret-down-outline"class="color"></ion-icon></button>
                 </div>
                 <div class="serviceText" id="texto">
                     <p>Desarrollo de identidades visuales que capturan y comunican la esencia de tu marca. Desde la creación de logotipos hasta la implementación de sistemas de identidad, me aseguro de que cada elemento gráfico refleje los valores y la personalidad de tu negocio, creando una presencia visual profesional y memorable.</p>
@@ -179,7 +179,7 @@
                 <div class="serviceTitle">
                     <p>Diseño Editorial</p>
                     <button id="boton2" onclick="ShowHide('texto2')" class="flecha"> <ion-icon size="large"
-                            name="caret-down-outline"></ion-icon></button>
+                            name="caret-down-outline"class="color"></ion-icon></button>
                 </div>
                 <div class="serviceText" id="texto2">
                     <p> Especializada en la maquetación y diseño de publicaciones, ofrezco soluciones creativas para libros, revistas, catálogos, y folletos. Me enfoco en mejorar la legibilidad, la organización visual, y la estética del contenido, asegurando que cada publicación sea visualmente atractiva y comunique de manera efectiva.</p>
@@ -191,7 +191,7 @@
                 <div class="serviceTitle">
                     <p>Desarrollo Web (Practicante)</p>
                     <button id="boton3" onclick="ShowHide('texto3')" class="flecha"> <ion-icon size="large"
-                            name="caret-down-outline"></ion-icon></button>
+                            name="caret-down-outline"class="color"></ion-icon></button>
                 </div>
                 <div class="serviceText" id="texto3">
                     <p>Ofrezco servicios de diseño web enfocados en la creación de interfaces atractivas y funcionales. Aunque estoy en proceso de formación en desarrollo web, utilizo mis conocimientos en diseño gráfico para crear maquetas y prototipos que mejoren la experiencia del usuario. Mi objetivo es colaborar en proyectos que busquen una presencia online efectiva, trabajando en la estética y la usabilidad para asegurar que el sitio cumpla con las necesidades del cliente.</p>
@@ -203,7 +203,7 @@
                 <div class="serviceTitle">
                     <p>Content Creation</p>
                     <button id="boton4" onclick="ShowHide('texto4')" class="flecha"> <ion-icon size="large"
-                            name="caret-down-outline"></ion-icon></button>
+                            name="caret-down-outline"class="color"></ion-icon></button>
                 </div>
                 <div class="serviceText" id="texto4">
                     <p>Producción y planificación de contenido visual para redes sociales y plataformas digitales. Desarrollo contenido que no solo es visualmente atractivo, sino que también está alineado con la identidad de tu marca, ayudando a aumentar la interacción y el engagement en tus canales digitales.</p>
