--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <div class="item7">
                     <img class="work" src="img/DISEÑOEDITORIAL.gif">
                     <div class="cardsection">
-                        <a class="work-title">Un-identified</a>
+                        <a href="./diseñoWeb.html" class="work-title">Un-identified</a>
                         <div class="w-capsula"> Diseño Editorial</div>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
                 <div class="item7">
                     <img class="work" src="img/LOGOANIMADO.gif">
                     <div class="cardsection">
-                        <a class="work-title">KOBOE FEST</a>
+                        <a href="./VisualIdentuty.html" class="work-title">KOBOE FEST</a>
                         <div class="w-capsula"> Graphic Design</div>
                     </div>
                 </div>
