icon color amarillo

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <div class="container-2" id="contact">
                 <div class="title-section">
                     <h2>CONTACT</h2>
-                    <ion-icon size="large" name="chatbox-ellipses-outline">
+                    <ion-icon size="large" class="flecha" name="chatbox-ellipses-outline">
                 </div>
             </div>
             <!-- contacto -->
