--- a/diseñoWeb.html
+++ b/diseñoWeb.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./screen.css">
     <link rel="stylesheet" href="./project.css">
     <link rel="" href="./index.html">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Project-WD</title>
 </head>
 <body>
@@ -28,14 +29,13 @@
            <img src="./img/DISEÑOEDITORIAL.gif" class="img1">
         </div>
     </div>
-
-    <div class="title-section">
+    <div class="title-section" data-aos="fade-up" data-aos-delay="100">
         <h2>UN-identified</h2>
         <div class="w-capsula">
             Producción Editorial & Creación de Contenidos
         </div>
     </div>
-<div class="subcontainer">
+<div class="subcontainer" data-aos="fade-up" data-aos-delay="200">
     <div class="logo-section">
         <div class="d-img2">
             <img src="./img/projects/u2.png" class="img2" >
@@ -52,8 +52,7 @@
     </div>
 </div>
 
-<div class="serviceCont">
-
+<div class="serviceCont" data-aos="fade-up" data-aos-delay="300">
     <div class="serviceTitle">
         <h3>Acerca de</h3>
         <button id="boton" onclick="ShowHide('texto')" class="flecha"> <ion-icon size="large"
@@ -67,12 +66,11 @@
 
 </div>
 
-
 <!-- contacto -->
 <div class="container-2" id="contact">
     <div class="title-section">
         <h2>CONTACT</h2>
-        <ion-icon size="large" class="flecha" name="chatbox-ellipses-outline">
+        <ion-icon size="large" class="color" name="chatbox-ellipses-outline">
     </div>
 </div>
 <!-- contacto -->
@@ -111,6 +109,11 @@
     </script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            duration: 1000,
+        });
+    </script>
 </body>
 </html>
