update de mi cv, y experiencia

--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
                         <p>Koboe Fest</p>
                         <div class="dates">Enero-junio 2024</div>
                     </div>
+                    <div class="ed-section" data-aos="fade-up" data-aos-delay="600">
+                        <p>Content creator</p>
+                        <p>Hydra + Fotografía</p>
+                        <div class="dates">2020-2022</div>
+                    </div>
                 </div>
 
             </div>
