ajuste en animaciones y correccion de ortografía

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <ion-icon size="large" name="bag-outline" class="color"></ion-icon>
             </div>
         </div>
-        <div class="card-container" data-aos="fade-up" data-aos-delay="50">
+        <div class="card-container" data-aos="fade-up" data-aos-delay="10">
             <div class="item7">
                 <img class="work" src="img/webdesign.jpg">
                 <div class="cardsection">
@@ -139,7 +139,7 @@
                 </div>
             </div>
         </div>
-        <div class="card-container" data-aos="fade-up" data-aos-delay="50">
+        <div class="card-container" data-aos="fade-up" data-aos-delay="10">
             <div class="item7">
                 <img class="work" src="img/LOGOANIMADO.gif">
                 <div class="cardsection">
@@ -159,7 +159,7 @@
         </div>
 
         <div class="logo-section slide-in-bottom ">
-            Couriosu for more?
+            ¿Quieres saber más? Contáctame
         </div>
 
         <!-- servicios -->
