--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <!-- work -->
         <div class="container-2" id="work">
             <div class="title-section">
-                <h2> WORK</h2>
+                <h2> PROJECTOS</h2>
                 <ion-icon size="large" name="bag-outline" class="color"></ion-icon>
             </div>
         </div>
@@ -165,7 +165,7 @@
         <!-- servicios -->
         <div class="container-2" id="servicios" data-aos="fade-up" data-aos-delay="200">
             <div class="title-section">
-                <h2>SERVICES</h2>
+                <h2>SERVICIOS</h2>
                 <ion-icon size="large" name="star-outline" class="color"></ion-icon>
             </div>
             <div class="serviceCont ">
@@ -234,7 +234,7 @@
         <!-- contacto -->
         <div class="container-2" id="contact">
             <div class="title-section">
-                <h2>CONTACT</h2>
+                <h2>CONTACTO</h2>
                 <ion-icon size="large" class="color" name="chatbox-ellipses-outline">
             </div>
         </div>
