--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h1> Patricia Sánchez</h1>
                 <p> Desarrolladora Web y Diseñadora gráfica</p>
                 <div class="status">
-                    <p class="p-status">Available for work</p>
+                    <p class="p-status">Preparada para nuevos proyectos</p>
                     <div class="dot">
                     </div>
                 </div>
@@ -43,8 +43,8 @@
                     formación, apasionada por crear <strong>identidades visuales</strong> que potencien la comunicación
                     de las marcas. Busco colaborar en proyectos creativos e impactantes.</p>
                 <div class="botones1">
-                    <a href="#work" class="botonNegro">WORK</a>
-                    <a href="./img/PATRICA SÁNCHEZ-CV.pdf" class="botonBorde">CV DOWNLOAD</a>
+                    <a href="#work" class="botonNegro">PROYECTOS</a>
+                    <a href="./img/PATRICA SÁNCHEZ-CV.pdf" class="botonBorde">CV</a>
                 </div>
             </div>
         </div>
@@ -119,7 +119,7 @@
         <!-- work -->
         <div class="container-2" id="work">
             <div class="title-section">
-                <h2> PROJECTOS</h2>
+                <h2> PROYECTOS</h2>
                 <ion-icon size="large" name="bag-outline" class="color"></ion-icon>
             </div>
         </div>
