--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h1> Patricia Sánchez</h1>
                 <p> Desarrolladora Web y Diseñadora gráfica</p>
                 <div class="status">
-                    <p class="p-status">Preparada para nuevos proyectos</p>
+                    <p class="p-status">Lista para colaborar</p>
                     <div class="dot">
                     </div>
                 </div>
@@ -41,7 +41,7 @@
             <div class="item2">
                 <p class="p-desc">Hola soy <strong>Patricia</strong> Diseñadora Gráfica y Desarrolladora Web en
                     formación, apasionada por crear <strong>identidades visuales</strong> que potencien la comunicación
-                    de las marcas. Busco colaborar en proyectos creativos e impactantes.</p>
+                    de las marcas. Busco participar en proyectos creativos e impactantes.</p>
                 <div class="botones1">
                     <a href="#work" class="botonNegro">PROYECTOS</a>
                     <a href="./img/PATRICA SÁNCHEZ-CV.pdf" class="botonBorde">CV</a>
